[tool.poetry]
name = "my_tracing_backend"
version = "0.1.0"
description = "The backend of my_tracing"
authors = ["Zxilly <zhouxinyu1001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
fastapi = {extras = ["all"], version = "^0.61.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
default = true
url = "https://pypi.tuna.tsinghua.edu.cn/simple"